--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,7 +35,7 @@
                         Kelola dan tambah API untuk kebutuhan WhatsApp bot
                     </p>
                 </div>
-                <a href="../index.html" class="bg-dark-card hover:bg-dark-border border border-dark-border rounded-lg px-4 py-2 text-dark-text hover:text-white transition-colors duration-200">
+                <a href="/list" class="bg-dark-card hover:bg-dark-border border border-dark-border rounded-lg px-4 py-2 text-dark-text hover:text-white transition-colors duration-200">
                     ← Kembali ke List
                 </a>
             </div>
