--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <th class="px-4 py-4 text-left text-white font-semibold text-sm uppercase tracking-wide">Nama API</th>
                             <th class="px-4 py-4 text-left text-white font-semibold text-sm uppercase tracking-wide">Developer</th>
                             <th class="px-4 py-4 text-left text-white font-semibold text-sm uppercase tracking-wide">URL</th>
-                            <th class="px-4 py-4 text-left text-white font-semibold text-sm uppercase tracking-wide">Status</th
+                            <th class="px-4 py-4 text-left text-white font-semibold text-sm uppercase tracking-wide">Status</th>
                             <th class="px-4 py-4 text-left text-white font-semibold text-sm uppercase tracking-wide">Auth</th>
                         </tr>
                     </thead>
